<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@mipmap/products"
            android:title="@string/title_products" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/title_contact"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/about"
            android:title="@string/title_about"/>
    </group>

</menu>
