<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit_dvice"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_del"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_del_dvice"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_add_dvice"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/action_info_dvice"
        app:showAsAction="ifRoom|withText"/>
</menu>
